roadmap added, send email tried

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Testimonials</a>
+                      <a class="nav-link" href="testimonials.html">Roadmap</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
@@ -70,16 +70,16 @@
 
         <!-- About -->
         <section class="row" id="tmAbout">
-          <header class="col-12 tm-about-header">
-            <h2 class="text-uppercase text-center text-dark tm-about-page-title">About this app</h2>
+          <header class="col-12 tm-about-header"><b>
+            <h2 class="text-uppercase text-center text-dark tm-about-page-title">About this app</h2></b>
             <hr class="tm-about-title-hr">
           </header>
           <div class="col-lg-4">
             <div class="tm-bg-black-transparent tm-about-box">
               <div class="tm-about-number-container">0.1</div>
-              <h3 class="tm-about-name">Best Quality</h3>
+              <h3 class="tm-about-name">Personalised Fantasy</h3>
               <p class="tm-about-description">
-                Create any question based on live match providing dynamic number of participation fee and number of participants.
+                Create any relevant question based on live match providing dynamic number of participation, fees and number of participants.
               </p>
             </div>
           </div>
@@ -168,8 +168,8 @@
         <!-- Page footer -->
         <footer class="row">
           <p class="col-12 text-white text-center tm-copyright-text">
-            Copyright &copy; 2020 App Landing Page.
-            Designed by <a href="#" class="tm-copyright-link">TemplateMo</a>
+            Copyright &copy; 2020 SportsDapp
+            <!-- Designed by <a href="#" class="tm-copyright-link">TemplateMo</a> -->
           </p>
         </footer>
       </div>
