--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-534-parallo
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Testimonials</a>
+                      <a class="nav-link" href="testimonials.html">Roadmap</a>
                     </li>
                     <li class="nav-item green-highlight active">
                       <div class="tm-nav-link-highlight"></div>
@@ -89,6 +89,7 @@ https://templatemo.com/tm-534-parallo
             </div>
           </div>
         </section>
+        <!-- <form method="post" action="send_mail.php"> -->
 
         <section class="row tm-contact-row">
             <div class="col-lg-6 tm-contact-col-left">
@@ -112,8 +113,9 @@ https://templatemo.com/tm-534-parallo
             <div class="col-lg-6 tm-contact-col-right">
                 <div class="tm-bg-black-transparent tm-contact-text">
 
-                    <i class="mx-auto mb-5 fas fa-3x fa-address-card tm-app-feature-icon"></i>
-
+                    <!-- <i class="mx-auto mb-5 fas fa-3x fa-address-card tm-app-feature-icon"></i> -->
+                    <img src="img/logo.jpg" class="tm-brand-icon" alt="Logo">
+                    <br>
                     <h3 class="tm-service-tab-title">SportsDapp</h3>
                     <p class="tm-service-tab-p">
                         Send us your queries and valuable feedbacks about the application.
@@ -146,8 +148,8 @@ https://templatemo.com/tm-534-parallo
         <!-- Page footer -->
         <footer class="row">
           <p class="col-12 text-white text-center tm-copyright-text">
-            Copyright &copy; 2020 App Landing Page.
-            Designed by <a href="#" class="tm-copyright-link">TemplateMo</a>
+            Copyright &copy; 2020 SportsDapp
+            <!-- Designed by <a href="#" class="tm-copyright-link">TemplateMo</a> -->
           </p>
         </footer>
       </div>
