--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Testimonials</a>
+                      <a class="nav-link" href="testimonials.html">Roadmap</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
