--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-534-parallo
 
         <section class="row tm-contact-row">
             <div class="col-lg-6 tm-contact-col-left">
-                <form action="#" method="POST" id="tmContactForm" class="tm-bg-black-transparent tm-contact-form">
+                <form action="send_mail.php" method="POST" id="tmContactForm" class="tm-bg-black-transparent tm-contact-form">
                   <div class="form-group">
                     <input type="text" id="contact_name" name="contact_name" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Name" required="">
                   </div>
