--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Roadmap</a>
+                      <a class="nav-link" href="roadmap.html">Roadmap</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
@@ -70,7 +70,7 @@
               <p class="tm-home-text">
                 SportsDapp is a transparent and high reward based earning platform for sports lovers to earn big by posting questions, answering them based on live match upcoming events. A blockchain powered solution to cut large middlemen fees.
               </p>
-              <a href="#tmFeatures" class="btn btn-primary">Download app</a>
+              <a href="https://play.google.com/apps/internaltest/4699806676826408805" class="btn btn-primary">Download app</a>
             </div>
             <div class="tm-home-right">
               <img src="img/mobile-screen.jpg" width="350" height="664" alt="App on Mobile"  />
