--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Roadmap</a>
+                      <a class="nav-link" href="roadmap.html">Roadmap</a>
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
