--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-534-parallo
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
-                      <a class="nav-link" href="testimonials.html">Roadmap</a>
+                      <a class="nav-link" href="roadmap.html">Roadmap</a>
                     </li>
                     <li class="nav-item green-highlight active">
                       <div class="tm-nav-link-highlight"></div>
@@ -137,7 +137,7 @@ https://templatemo.com/tm-534-parallo
                 We would love to be in touch with you for all the future updates about the application.
 
               </p>
-              <form action="#" method="get" class="tm-call-to-action-form">
+              <form action="send_mail.php" method="get" class="tm-call-to-action-form">
                 <input name="email" type="email" class="tm-email-input" id="email" placeholder="Email" />
                 <button type="submit" class="btn btn-secondary">Get Updates</button>
               </form>
