--- a/thank_you.html
+++ b/thank_you.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>Thank You</title>	
+<title>Thank You</title>
 
 <h1>Thanks for your feedback!</h1>
 <p>We appreciate that you took the time to send us feedback. Your feedback has been sent to the webmaster.</p>
-<p><a href="feedback_form.html">Back to feedback form</a>.</p>
+<p><a href="contact.html">Back to feedback form</a>.</p>
