screenshot changed and sports added

--- a/index.html
+++ b/index.html
@@ -154,6 +154,47 @@
 
 
       </div>
+      <br>
+      <section class="wow fadeIn" id="concept">
+          <div class="container-fluid">
+          <div class="section-bottom">
+          <!-- <header class="section-header text-center">
+            <b>  <font color="white" size="4">
+                  <h2>What sports can you play?</h2></b>
+                  </font> -->
+          <div class="bottom-border"></div>
+          <br>
+          <!-- </header> -->
+          </div>
+          </div>
+          <div class="container">
+          <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12 text-center">
+          <div class="tm-bg-black-transparent tm-feature-box">
+          <img src="img/cricket.png" alt="cricket" width="240" height="255">
+          <br><br><br>
+          <h4 class="concept-text">CRICKET</h4>
+          </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12 text-center">
+          <div class="tm-bg-black-transparent tm-feature-box">
+          <img src="img/football.png" alt="football" width="240" height="255">
+          <br><br><br>
+
+          <h4 class="concept-text">FOOTBALL</h4>
+          </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12 text-center">
+          <div class="tm-bg-black-transparent tm-feature-box">
+          <img src="img/badminton1.png" alt="badminton" width="200" height="255">
+          <br><br><br>
+          <h4 class="concept-text">BADMINTON</h4>
+          <p>and many more to come....</p>
+          </div>
+          </div>
+        
+          </section>
+          
 
       <!-- <div style="float:left"> -->
         <!-- Call to Action -->
