--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
               <b>
             <h2 class="tm-call-to-action-title" style="margin-left:auto; width:55%;">How to play?</h2>
             <p class="tm-call-to-action-description" style="margin-left:auto; width:52%;">
+              </b>
 
               <font color="white" size="5">
 
-             1. Create any real-time live relevant matches Question.<br><br>
-             2. Participate in Questions already created as per your wish.<br><br>
+             1. Create any relevant Question in context to live match feed for popular sports matches (cricket, football).<br><br>
+             2. Participate in Questions already created (by other users) as per your wish & predict them.<br><br>
              3. Win Cash prizes directly transferred to you.   <br><br>
 
             </font>
             </p>
           </p>
-        </b>
         </font>
 
         </div>
