--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
+    <link rel="icon" href="img/logo.jpg">
 
   </head>
   <body>
@@ -192,9 +193,9 @@
           <p>and many more to come....</p>
           </div>
           </div>
-        
+
           </section>
-          
+
 
       <!-- <div style="float:left"> -->
         <!-- Call to Action -->
