--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/templatemo-style.css" />
+    <link rel="icon" href="img/logo.jpg">
   </head>
 <!--
 Parallo Template
@@ -137,7 +138,7 @@ https://templatemo.com/tm-534-parallo
                 We would love to be in touch with you for all the future updates about the application.
 
               </p>
-              <form action="send_mail.php" method="get" class="tm-call-to-action-form">
+              <form action="#" method="get" class="tm-call-to-action-form">
                 <input name="email" type="email" class="tm-email-input" id="email" placeholder="Email" />
                 <button type="submit" class="btn btn-secondary">Get Updates</button>
               </form>
