--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="https://play.google.com/apps/internaltest/4699806676826408805" class="btn btn-primary">Download app</a>
             </div>
             <div class="tm-home-right">
-              <img src="img/mobile-screen.jpg" width="350" height="664" alt="App on Mobile"  />
+              <img src="img/mobile-screen.jpeg" width="350" height="664" alt="App on Mobile"  />
             </div>
           </div>
         </section>
